--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "10.4.15",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
@@ -17,6 +19,7 @@
     "next": "13.4.18",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
