--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "@react-google-maps/api": "^2.19.3",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.15",
     "bootstrap": "^5.3.3",
     "clsx": "^2.0.0",
